--- a/Introduction.mdx
+++ b/Introduction.mdx
@@ -67,11 +67,18 @@ Next Level3’s Just-In-Time (JIT) Access is a revolutionary, highly secure solu
     Integrating NL3 Authentication directly to your application
   </Card>
   <Card 
-    title="Cyber  Policies  and  Monitoring  Activity" 
-    href="/Features/Cyber Policies and Activity Logs" 
+    title="JIT  Policies  and  Monitoring  Activity" 
+    href="/Features/JIT Policies and Activity Logs" 
     icon="user-lock"
     >
-    Monitoring account activity and creating cyber policies in the portal
+    Monitoring account activity and creating JIT policies in the portal
+  </Card>
+  <Card 
+    title="JIT  Approvals" 
+    href="/Features/JIT Approvals" 
+    icon="user-lock"
+    >
+    Creating and Managing your JIT Approvals
   </Card>
   <Card
     title="Using  Next  Level3  API"
@@ -101,6 +108,9 @@ Next Level3 native language integrations include Node JS, Python, and Microsoft 
 Cyber Policies are used to control access to your application accounts and manage that access for your companies users (employees, contractors, third parties and customers). There are a number of use cases for a variety of industries in which Cyber Policies provide solutions to solve problems. 
 
 With NL3 Activity logs, you can view your company's user activity. This feature allows you to monitor account lock statuses and when a user has accessed your company applications.
+
+## JIT Approvals
+JIT approvals are used to grant elevated privileges to your users for your applications. This process requires an administrators approval that when approved will provide access to the user in real time. There are a number of use cases in which JIT Approvals provide solutions to solve problems. This document will outline each of the JIT Approval types available to you and will define how to create, use, and manage Next Level3's JIT Approvals within your Company Portal. 
 
 ## API  Documentation
 NL3 API Documentation is hosted by SwaggerUI. In case you need to reference it, it is available both externally for public access and internally once you have registered your company account.
