--- a/Features/JIT Approvals.mdx
+++ b/Features/JIT Approvals.mdx
@@ -53,9 +53,14 @@ Currently, there are two approval types support by the Next Level3 Cloud Identit
     ### EXAMPLE JIT APPROVE REQUEST 
     Once a request is sent it will appear in the default approver's notification pane like the image below
     <img src="/images/JIT/approval request.png" />
-    As seen in the example above the JIT Approval request contains the following data with the metadata fields that were used in the template created for it:
-    **Approval Title**:Authorization Required for Ticket Purchase
+    As seen in the example above the JIT Approval request contains the following data with the metadata fields that were used in the template created for it;
+    
+    **Approval Title**: 
+    
+    Authorization Required for Ticket Purchase
+    
     **Approval Data**: 
+        
         Authorization Required: Confirm Purchase
     
         This request came from: steve
@@ -63,11 +68,13 @@ Currently, there are two approval types support by the Next Level3 Cloud Identit
         Hi there! We have received a purchase request for the following item:
 
         Item: Metallica Ticket - 43D 
+        
         Price: $1,654
 
         To authorize this purchase, please sign and click the Approve button below, otherwise, If you did not initiate this purchase or suspect any unauthorized activity, please click on the Reject button.
 
         Thank you for choosing our store!
+        
         www.dev.nl3bank.com
     
      The only value that wasn't added to the metadata field but was called in the Approval Data field was the companyName value which was set to msonline.nextlevel3.com. The reason this value wasn't set as a metadata value is because it was sent in the notification from generating the curl HTTP POST that was used to send the JIT Approval. See below to understand how the curl HTTP POST request works for this approval:
@@ -140,25 +147,28 @@ curl -X "POST" "https://api.nextlevel3.com/nl3/api/v1/approvalRequest" \
     <img src="/images/JIT/sign and approve metadata.png" />
     ### EXAMPLE JIT APPROVE REQUEST 
     Once a request is sent it will appear in the default approver's notification pane like the image below. 
-    | Top                                                     | Bottom                                                   |
-    | ------------------------------------------------------- | -------------------------------------------------------- |
-    |<img src="/images/JIT/sign and approve approval1.png" /> | <img src="/images/JIT/sign and approve approval1.png" /> |
+    <img src="/images/JIT/sign and approve approval1.png" />
+    <img src="/images/JIT/sign and approve approval2.png" /> 
     As seen in the example above the JIT Approval request contains the following data with the metadata fields that were used in the template created for it:
-    Approval Title: Authorization Required for Purchase
-    Approval Data: 
-        Authorization Required: Confirm Purchase
     
-        This request came from: kevin
-
-        Hi there! We have received a purchase request for the following item:
-
-        Item: Metallica Ticket - 43D 
-        Price: $1,654
-
-        To authorize this purchase, please sign and click the Approve button below, otherwise, If you did not initiate this purchase or suspect any unauthorized activity, please click on the Reject button.
-
-        Thank you for choosing our store!
-        msonline.nextlevel3.com
+    - Approval Title: Authorization Required for Purchase                                                                                                                                                     |
+    - Approval Data:
+    
+    Authorization Required: Confirm Purchase
+    
+    This request came from: kevin 
+    
+    Hi there! We have received a purchase request for the following item:
+    
+    Item: Metallica Ticket - 43D 
+    
+    Price: $1,654
+    
+    To authorize this purchase, please sign and click the Approve button below, otherwise, If you did not initiate this purchase or suspect any unauthorized activity, please click on the Reject button.
+    
+    Thank you for choosing our store!
+    
+    msonline.nextlevel3.com
     
     The only value that wasn't added to the metadata field but was called in the Approval Data field was the companyName value which was set to msonline.nextlevel3.com. The reason this value wasn't set as a metadata value is because it was sent in the curl HTTP GET notification that was used to receive the JIT Approval Request Notification at the approvers account giving the approver the ability to either approve or reject access to the user requesting JIT access. See below to understand how the curl HTTP POST request works for this approval:
     <Note>cURL (curl) is an open source command-line tool used for transferring data over a network. POST is an HTTP request method which is used to send data to the server. The notification received from the curl POST is an HTTP GET which is a request that is used to receive data from the server.</Note>
