--- a/Features/JIT Approvals.mdx
+++ b/Features/JIT Approvals.mdx
@@ -75,7 +75,7 @@ Currently, there are two approval types support by the Next Level3 Cloud Identit
 
         Thank you for choosing our store!
         
-        \www.dev.nl3bank.com
+        \\www.dev.nl3bank.com
     
      
     
