--- a/Features/JIT Approvals.mdx
+++ b/Features/JIT Approvals.mdx
@@ -44,7 +44,7 @@ Currently, there are two approval types support by the Next Level3 Cloud Identit
         <img src="/images/JIT/meta data input.png" />
         **Values**
         - KEY - The key value of your metadata will be called in the "Approval Data" section of the new template your are creating and is called by using the following format;
-            - Format: $(Key), where "Key" is the name you choose for the metadata Key in the "Add New Metadata" dialogue box.
+            - Format: ${Key}, where "Key" is the name you choose for the metadata Key in the "Add New Metadata" dialogue box.
         - DEFAULT VALUE - The default value of your metadata item can be specified during its creation, this value will appear in the "Approval Data" section of the approval request where the metadata key is specified.
     ### EXAMPLE JIT APPROVE APPROVAL TEMPLATE
     <img src="/images/JIT/example top template.png" />
@@ -142,7 +142,7 @@ curl -X "POST" "https://api.nextlevel3.com/nl3/api/v1/approvalRequest" \
         <img src="/images/JIT/meta data input.png" />
         **Values**
         - KEY - The key value of your metadata will be called in the "Approval Data" section of the new template your are creating and is called by using the following format;
-            - Format: $(Key), where "Key" is the name you choose for the metadata Key in the "Add New Metadata" dialogue box.
+            - Format: ${Key}, where "Key" is the name you choose for the metadata Key in the "Add New Metadata" dialogue box.
         - DEFAULT VALUE - The default value of your metadata item can be specified during its creation, this value will appear in the "Approval Data" section of the approval request where the metadata key is specified.
     ### EXAMPLE JIT SIGN AND APPROVE APPROVAL TEMPLATE
     <img src="/images/JIT/sign and approve.png" />
