--- a/Features/JIT Approvals.mdx
+++ b/Features/JIT Approvals.mdx
@@ -61,21 +61,21 @@ Currently, there are two approval types support by the Next Level3 Cloud Identit
     
     **Approval Data**: 
         
-        Authorization Required: Confirm Purchase
-    
-        This request came from: steve
-
-        Hi there! We have received a purchase request for the following item:
-
-        Item: Metallica Ticket - 43D 
-        
-        Price: $1,654
-
-        To authorize this purchase, please sign and click the Approve button below, otherwise, If you did not initiate this purchase or suspect any unauthorized activity, please click on the Reject button.
-
-        Thank you for choosing our store!
-        
-        www\.dev\.nl3bank\.com
+        > Authorization Required: Confirm Purchase
+        > 
+        > This request came from: steve
+        > 
+        > Hi there! We have received a purchase request for the following item:
+        >
+        > Item: Metallica Ticket - 43D 
+        >
+        > Price: $1,654
+        > 
+        > To authorize this purchase, please sign and click the Approve button below, otherwise, If you did not initiate this purchase or suspect any unauthorized activity, please click on the Reject button.
+        > 
+        > Thank you for choosing our store!
+        >
+        > [www.dev.nl3bank.com]( )
     
      
     
@@ -157,21 +157,21 @@ curl -X "POST" "https://api.nextlevel3.com/nl3/api/v1/approvalRequest" \
     - **Approval Title**: Authorization Required for Purchase                                                                                                                                                     |
     - **Approval Data**:
     
-    Authorization Required: Confirm Purchase
-    
-    This request came from: kevin 
-    
-    Hi there! We have received a purchase request for the following item:
-    
-    Item: Metallica Ticket - 43D 
-    
-    Price: $1,654
-    
-    To authorize this purchase, please sign and click the Approve button below, otherwise, If you did not initiate this purchase or suspect any unauthorized activity, please click on the Reject button.
-    
-    Thank you for choosing our store!
-    
-    msonline.nextlevel3.com
+    > Authorization Required: Confirm Purchase
+    >
+    > This request came from: kevin 
+    >
+    > Hi there! We have received a purchase request for the following item:
+    >
+    > Item: Metallica Ticket - 43D 
+    >
+    > Price: $1,654
+    >
+    > To authorize this purchase, please sign and click the Approve button below, otherwise, If you did not initiate this purchase or suspect any unauthorized activity, please click on the Reject button.
+    >
+    > Thank you for choosing our store!
+    >
+    > msonline.nextlevel3.com
     
     
     
