--- a/Features/Protecting your Endpoints.mdx
+++ b/Features/Protecting your Endpoints.mdx
@@ -21,10 +21,10 @@ You will need:
     
     1. Log into your NextLevel3 portal at https://company.nextlevel3.com/
     2. Navigate to Applications and choose the appropriate application (in this case jump-servers).
-    3. Copy the application URL (in this case jump-servers.infra.company.com) somewhere you can retrieve it.
-    <img src="/images/pam/pam1.png" />
+    3. Copy the application URL (in this case www.dev.nl3bank.com) somewhere you can retrieve it.
+    <img src="/images/nextlevel3/applications pane.png" />
     4. Next, navigate to Keys & Tokens, select the Application from step 2 and Key Type “Application Signing Keys”, then click on the Key to retrieve the Application Signing Key.
-    <img src="/images/pam/pam2.png" />
+    <img src="/images/nextlevel3/keys and tokens pane.png" />
     5. Copy the signing key (it may be multiple lines), and store it with the URL from earlier.
     <img src="/images/pam/pam3.png" />
     6. Download the installer from the company portal on the Windows user account you are protecting.
@@ -64,10 +64,10 @@ You will need:
 
     1. Log into your NextLevel3 portal at https://company.nextlevel3.com/
     2. Navigate to Applications and choose the appropriate application (in this case jump-servers).
-    3. Copy the application URL (in this case jump-servers.infra.company.com) somewhere you can retrieve it.
-    <img src="/images/pam/pam1.png" />
+    3. Copy the application URL (in this case www.dev.nl3bank.com) somewhere you can retrieve it.
+    <img src="/images/nextlevel3/applications pane.png" />
     4. Next, navigate to Keys & Tokens, select the Application from step 2 and Key Type “Application Signing Keys”, then click on the Key to retrieve the Application Signing Key.
-    <img src="/images/pam/pam2.png" />
+    <img src="/images/nextlevel3/keys and tokens pane.png" />
     5. Copy the signing key (it may be multiple lines), and store it with the URL from earlier.
     <img src="/images/pam/pam3.png" />
     6. Download the installer, and copy it to the system you want to install it on.
@@ -133,10 +133,10 @@ You will need:
 
     1. Log into your NextLevel3 portal at https://company.nextlevel3.com/
     2. Navigate to Applications and choose the appropriate application (in this case jump-servers).
-    3. Copy the application URL (in this case jump-servers.infra.company.com) somewhere you can retrieve it.
-    <img src="/images/pam/pam1.png" />
+    3. Copy the application URL (in this case www.dev.nl3bank.com) somewhere you can retrieve it.
+    <img src="/images/nextlevel3/applications pane.png" />
     4. Next, navigate to Keys & Tokens, select the Application from step 2 and Key Type “Application Signing Keys”, then click on the Key to retrieve the Application Signing Key.
-    <img src="/images/pam/pam2.png" />
+    <img src="/images/nextlevel3/keys and tokens pane.png" />
     5. Copy the signing key (it may be multiple lines), and store it with the URL from earlier.
     <img src="/images/pam/pam3.png" />
     6. Download the installer, and copy it to the system you want to install it on.
@@ -189,10 +189,10 @@ You will need:
 
     1. Log into your NextLevel3 portal at https://company.nextlevel3.com/
     2. Navigate to Applications and choose the appropriate application (in this case jump-servers).
-    3. Copy the application URL (in this case jump-servers.infra.company.com) somewhere you can retrieve it.
-    <img src="/images/pam/pam1.png" />
+    3. Copy the application URL (in this case www.dev.nl3bank.com) somewhere you can retrieve it.
+    <img src="/images/nextlevel3/applications pane.png" />
     4. Next, navigate to Keys & Tokens, select the Application from step 2 and Key Type “Application Signing Keys”, then click on the Key to retrieve the Application Signing Key.
-    <img src="/images/pam/pam2.png" />
+    <img src="/images/nextlevel3/keys and tokens pane.png" />
     5. Copy the signing key (it may be multiple lines), and store it with the URL from earlier.
     <img src="/images/pam/pam3.png" />
     6. Download the installer, and copy it to the system you want to install it on.
