--- a/Features/Setting up End Users.mdx
+++ b/Features/Setting up End Users.mdx
@@ -34,27 +34,27 @@ The next step is to add an NL3 User Enablement workflow in your application. Thi
 ### Adding  Users  Manually
 All users are managed from the Company Portal from the "Users" tab.
 
-<img src="/images/User Management/User1.png" />
+<img src="/images/nextlevel3/end user pane" />
 
 Here, the administrator can enable/disable account protection for associated applications and enable/disable administrative access to the Company Portal. 
 
 When a user is unable to access their account through any of their authorized devices and they have lost their recovery key the administrator can utilize the reset account function.
 
-<img src="/images/User Management/User2.png" />
+<img src="/images/nextlevel3/end user options.png" />
 
 The "Actions" button in the top right corner, allows administrators to add users either manually or imported via .csv and view previous user imports.
 
 ### Actions  Menu
-<img src="/images/User Management/User3.png" />
+<img src="/images/nextlevel3/end user actions.png" />
 
 ## Group  Management
 Groups are managed and created in the Group Manager pane:
 
-<img src="/images/Group Management/Group1.png" />
+<img src="/images/nextlevel3/group management pane.png" />
 
 Groups are added by selecting the **"+ New Group"** button in the top right-hand corner of the pane. Selecting this option will bring up the "New Group" creation page where the user can add the name and description of the group:
 
-<img src="/images/Group Management/Group2.png" />
+<img src="/images/nextlevel3/group management new group.png" />
 
 Once a group has been created the user can then manage the users in the group by selecting the pencil icon or delete the group by selecting the trashcan icon in the "ACTION" column. 
 
