--- a/Features/JIT Policies and Activity Logs.mdx
+++ b/Features/JIT Policies and Activity Logs.mdx
@@ -25,7 +25,7 @@ Currently, there are three policy types supported by the Next Level3 Cloud Ident
 ### Scheduled  Policies
 Scheduled policies are used to lock and unlock accounts at a specific time. They can be scheduled to run starting on a specific date and can optionally have an end date. To create a new scheduled policy, click the add new policy button in the Policy Manager.
 
-<img src="/images/policy1.png" />
+<img src="/images/nextlevel3/new policy.png" />
 
 This will create a new policy and allow you to specify the following;
 
@@ -49,13 +49,13 @@ Once the Scheduled policy is created it can be applied. To apply the policy, you
 
 **EXAMPLE "ASSIGN GROUPS TO POLICY" ACTION**
 
-<img src="/images/policy3.png" />
+<img src="/images/nextlevel3/example policy.png" />
 
 You will then need to assign users and/or groups to the policy by selecting them in the list to the left and moving them to the right by using the ">" button or assigning all users and groups by using the ">>" button.
 
 **EXAMPLE SCHEDULED POLICY ASSIGNMENT**
 
-<img src="/images/policy4.png" />
+<img src="/images/nextlevel3/policy groups&users.png" />
 </Tab>
 <Tab icon="/icons/circle-exclamation-solid.svg" title="Alert">
 
@@ -70,7 +70,7 @@ Alert policies are designed to act as a safeguard in the event of scenarios such
 
 To create a new Alert policy, click the add new policy button in the Policy Manager.
 
-<img src="/images/policy1.png" />
+<img src="/images/nextlevel3/new policy.png" />
 
 This will create a new policy and allow you to specify the following;
 
@@ -125,7 +125,7 @@ Multi Approval policies enable you to define a secondary approver who must appro
 
 To create a new Multi-Approval policy, click the add new policy button in the Policy Manager.
 
-<img src="/images/policy1.png" />
+<img src="/images/nextlevel3/new policy.png" />
 
 This will create a new policy and allow you to specify the following;
 
@@ -162,4 +162,4 @@ Filter By Name: You can filter the current results on the page by username.
 
 Search By Name: You can search the logs of all records by username.
 
-<img src="/images/Activity.png" />
+<img src="/images/nextlevel3/Activity.png" />
