--- a/Introduction.mdx
+++ b/Introduction.mdx
@@ -80,6 +80,13 @@ Next Level3’s Just-In-Time (JIT) Access is a revolutionary, highly secure solu
     >
     Creating and Managing your JIT Approvals
   </Card>
+  <Card 
+    title="JIT Privileged Access Management" 
+    href="/Features/JIT Privileged Access Management" 
+    icon="user-lock"
+    >
+    Creating and Managing your JIT Privileged Access
+  </Card>
   <Card
     title="Using  Next  Level3  API"
     href="https://api.nextlevel3.com/nl3/api/swagger-ui/index.html#/"
@@ -111,6 +118,9 @@ With NL3 Activity logs, you can view your company's user activity. This feature 
 
 ## JIT Approvals
 JIT approvals are used to grant elevated privileges to your users for your applications. This process requires an administrators approval that when approved will provide access to the user in real time. There are a number of use cases in which JIT Approvals provide solutions to solve problems. This document will outline each of the JIT Approval types available to you and will define how to create, use, and manage Next Level3's JIT Approvals within your Company Portal. 
+
+# JIT Privileged Access Management
+Next Level3's JIT Privileged Access Management provides time-based and approval-based role activation to mitigate the risks of excessive, unnecessary, or misused access permissions on resources. 
 
 ## API  Documentation
 NL3 API Documentation is hosted by SwaggerUI. In case you need to reference it, it is available both externally for public access and internally once you have registered your company account.
