--- a/JIT Privileged Access Management.mdx
+++ b/JIT Privileged Access Management.mdx
@@ -91,7 +91,7 @@ Requirements: Admin Level Next Level3 Company Account Access.
 
             - Login to company.nextlevel3.com and navigate to "Management" -> "Integrations"
             - Select your registred domain from first dropdown and "Azure Configuration" from second dropdown
-            - Input Azure "Tenant ID", "Client ID" and client secert
+            - Input Azure "Tenant ID", "Client ID" and client secert.
             - Click Save
         </Tab>
     </Tabs>
